--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,26 +3,58 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Responsive Layout</title>
+<title>Our Menu</title>
 <style>
 
 /********** Base styles **********/
 * {
   box-sizing: border-box;
+  margin:  0;
+  padding: 0;
 }
 h1 {
   margin-bottom: 15px;
+  margin-top: 15px;
+  font-family: Georgia;
 }
 
-p {
+h2 {
+  position: absolute;
+  right: 0px;	
   border: 1px solid black;
-  background-color: #A52A2A;
+  padding: 5px 10px 5px 10px;
+  font-family: Georgia;
+}
+
+#Chiken {
+  background-color: #FF8C00;
+}
+
+#Beef {
+  background-color: #B22222;
+}
+
+#Sushi {
+  background-color: #F0E68C;
+}
+
+
+p {
   width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+  height: 100%;
+  padding-top: 50px;
+  margin-right: 20px;
+  margin-left: 20px;
+  padding-bottom: 15px;
+  font-family: Georgia;
+  color: black;
+}
+
+section {
+	background-color: #FFE4E1;
+  position: relative;
+  margin: 15px;
+  border: 2px solid black;
 }
 
 /* Simple Responsive Framework. */
@@ -31,10 +63,9 @@ p {
 }
 
 /********** Large devices only **********/
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -75,10 +106,9 @@ p {
 }
 
 /********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -121,17 +151,12 @@ p {
 </style>
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<center><h1>Our Menu</h1></center>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
+  <div class="col-lg-4 col-md-6"><section><h2 id="Chiken">Chiken</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
+  <div class="col-lg-4 col-md-6"><section><h2 id="Beef">Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
+  <div class="col-lg-4 col-md-12"><section><h2 id="Sushi">Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
 </div>
 
 </body>
