--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -9,20 +9,51 @@
   <title>Our Menu</title>
 
 </head>
-
   <body>
-  <center><h1>Our Menu</h1></center>
 
-  <div class="row">
-    <div class="col-lg-4 col-md-6"><section><h2 id="Chiken">Chiken</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
-    <div class="col-lg-4 col-md-6"><section><h2 id="Beef">Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
-    <div class="col-lg-4 col-md-12"><section><h2 id="Sushi">Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
-  </div>
+    <header>
+      <nav id="header-nav" class="navbar navbar-expand-xs navbar-light bg-light">
+
+        <div class="container">
+          <a class = "navbar-brand" href="index.html"><h1 id="Logo-name">Food, LLC</h1></a>
+
+          <button class="navbar-toggler d-block d-sm-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul id="nav-list" class="navbar-nav me-auto">
+              <li class="nav-item active">
+                <a class="nav-link text-center" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show" href="#">Chiken</a>
+              </li>
+              <li class="nav-item active text-center">
+                <a class="nav-link" data-bs-toggle="collaple" data-bs-target=".navbar-collapse.show" href="#">Beef</a>
+              </li>
+              <li class="nav-item active text-center">
+                <a class="nav-link" data-bs-toggle="collaple" data-bs-target=".navbar-collapse.show" href="#">Sushi</a>
+              </li>
+            </ul>
+          </div>
 
 
-  <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="js/script.js"></script>
+        </div> 
+
+
+
+      </nav>
+    </header>
+    <center><h1 id="Menu">Our Menu</h1></center>
+
+    <div class="row">
+      <div class="col-lg-4 col-md-6"><section><h2 id="Chiken">Chiken</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
+      <div class="col-lg-4 col-md-6"><section><h2 id="Beef">Beef</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
+      <div class="col-lg-4 col-md-12"><section><h2 id="Sushi">Sushi</h2><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></section></div>
+    </div>
+
+
+    <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 
 </html>
